--- a/containers/composes/dc.dev.yml
+++ b/containers/composes/dc.dev.yml
@@ -1,8 +1,8 @@
-version: '3.8'
+version: "3.8"
 
 services:
   server:
-    image: v 
+    image: chat-app
     deploy:
       replicas: 1
     restart: always
