--- a/containers/images/Dockerfile
+++ b/containers/images/Dockerfile
@@ -1,11 +1,11 @@
-FROM golang:1.16.7-alpine3.14
+FROM golang:1.21-alpine
 WORKDIR /src
 
 COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
 
-RUN CGO_ENABLED=0 go build -o /bin/app ./cmd
+RUN CGO_ENABLE=0 go build -o /bin/app ./cmd
 
 FROM alpine
 WORKDIR /src
@@ -14,4 +14,4 @@ COPY --from=0 /bin/app /bin/app
 COPY --from=0 /src/views /src/views
 COPY --from=0 /src/assets /src/assets
 
-ENTRYPOINT ["/bin/app"]
+ENTRYPOINT [ "/bin/app" ]
