added debugging to better understand flow

--- a/containers/images/Dockerfile
+++ b/containers/images/Dockerfile
@@ -5,7 +5,7 @@ COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
 
-RUN CGO_ENABLE=0 go build -o /bin/app ./cmd
+RUN CGO_ENABLED=0 go build -o /bin/app ./cmd
 
 FROM alpine
 WORKDIR /src
